[tool.poetry]
name = "d42"
version = "1.3.1"
description = "One package for district42 ecosystem"
readme = "README.md"
authors = ["Nikita Tsvetkov <nikitanovosibirsk@yandex.com>"]
repository = "https://github.com/nikitanovosibirsk/d42"
license = "Apache-2.0"
include = ["d42/py.typed"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.8"
district42 = "~1.5"
blahblah = "~1.5"
valera = "~1.5"
revolt = "~1.5"

[tool.poetry.dev-dependencies]
bump2version = "^1.0.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 99
multi_line_output = 3
include_trailing_comma = true
